--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meu primeiro site</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1>cr7</h1>
+    <img src="img/screen-shot-2021-08-17-at-15.54.25.webp" alt="um jogador de futbol chamado cr7">
+    <p>Cristiano Ronaldo está entre os maiores jogadores da história do futebol e persegue a marca de mil gols. Aos 40 anos, o português tem 934 gols em 1275 jogos na carreira, o que resulta em uma média de 0,73 tentos por partida. Ele é o maior goleador da história do futebol considerando apenas jogos oficiais.</p>
+<h2>qualidade</h2>
+<ul><li>bom jogador</li>
+    <li>inteligente</li>
+    <li>inspiração</li>
+</ul>
+<h2>autoria</h2>
+<p>brenda ou do 2c tenho 15 anos sou negona</p>
 </body>
 </html>
